[package]
name = "chargeback"
version = "0.1.0"
authors = ["Lily <lilywiwior@gmail.com>", "Kubin <kbachurski@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "*"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "*", optional = true }


[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
